--- a/css/twitter.css
+++ b/css/twitter.css
@@ -89,14 +89,17 @@ a {
 .media-image{
     width: 50px;
     margin-top: 1.33em;
+    float:left
+
     /*float: left;*/
 }
 .media{
     padding: .5em;
-    border: 2px solid white;
+    border-bottom: 1px solid grey;
     background-color: white;
     width: 100%;
     overflow: auto;
+
 
 }
 .media-body{
